Fix alignment of projects on landing page

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -121,7 +121,7 @@ select {
     h3 {
       margin: 0;
       font-size: 1em;
-      padding: 15px 20px;
+      padding:  26px 20px;
       min-height: 4em;
     }
 
